--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -21,3 +21,13 @@ spec:
   type: service
   owner: user/martina
   lifecycle: experimental
+---
+apiVersion: backstage.io/v1alpha1
+kind: Component
+metadata:
+  name: componentA
+  description: This is the renamed-again component in a different repo
+spec:
+  type: service
+  owner: user/martina
+  lifecycle: experimental
