--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -35,7 +35,7 @@ spec:
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: C5
+  name: C5-renamed
   description: This is for scenario 5
 spec:
   type: service
