--- a/catalog-system.yaml
+++ b/catalog-system.yaml
@@ -6,3 +6,11 @@ metadata:
 spec:
   type: service
   owner: user/martina
+---
+apiVersion: backstage.io/v1alpha1
+kind: System
+metadata:
+  name: martina-system-2
+  description: A test system
+spec:
+  owner: user/martina
